Transformed department into record and introduced dedicated class for superior